[package]
name = "helium-proto"
version = "0.1.0"
authors = ["Helium <info@helium.com>"]
edition = "2018"

[features]
default= []
services=["tonic-build", "tonic"]

[dependencies]
tonic = {version = "0.4", optional = true}
bytes = "1"
prost = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0"
bs58 = {version = "0", features=["check"]}
byteorder = "0"

[build-dependencies]
tonic-build = {version = "0.4", optional = true}
prost-build = "0.7"
base64 = "0.12"
bs58 = {version = "0.3.0", features=["check"]}